Interpreter. If you enter text that doesn't bind to a specific station (pretty unlikely, except for on mobile!), like 'gent', the interpreter will automatically find the station 'Gent-Sint-Pieters':) If this doesn't work, the app will let you know. Note that aliases don't work here yet.

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,2 +1,8 @@
 /* Main SASS CSS file */
 
+input.ng-invalid {
+  border: 1px solid red !important;
+  }
+input.ng-valid {
+  border: 1px solid green !important;
+  }
