--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,1 +1,6 @@
 /* Main SASS CSS file */
+input.ng-invalid {
+  border: 1px solid red !important; }
+
+input.ng-valid {
+  border: 1px solid green !important; }
