--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -4,5 +4,75 @@ input.ng-invalid {
   border: 1px solid red !important;
   }
 input.ng-valid {
-  border: 1px solid green !important;
+  border: 1px solid #A52222 !important;
+  }
+
+.container33{
+  display: inline-block;
+  width: 100%;
+  .el33{
+	float: left;
+	width: 33%;
+  }
+  .tleft{
+	text-align: left;
+	}
+  .tright{
+	text-align: right;
+	}
+  .tcenter{
+	text-align: center;
+	}
+}
+
+.floatright{
+  float: right;
+  clear: both;
+  }
+
+.center{
+  text-align: center;
+  }
+
+.list-group{
+  margin-bottom: 0px !important;
+  }
+
+.loader {
+  margin: 6em auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(0, 0, 0, 0.2);
+  border-right: 1.1em solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1.1em solid rgba(0, 0, 0, 0.2);
+  border-left: 1.1em solid #333;
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+  }
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+  }
+@-webkit-keyframes load8 {
+  0% {
+	-webkit-transform: rotate(0deg);
+	transform: rotate(0deg);
+	}
+  100% {
+	-webkit-transform: rotate(360deg);
+	transform: rotate(360deg);
+	}
+  }
+@keyframes load8 {
+  0% {
+	-webkit-transform: rotate(0deg);
+	transform: rotate(0deg);
+	}
+  100% {
+	-webkit-transform: rotate(360deg);
+	transform: rotate(360deg);
+	}
   }
