--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,21 +2,26 @@
 input.ng-invalid {
   border: 1px solid red !important; }
 
-input.ng-valid {
-  border: 1px solid #A52222 !important; }
-
 .container33 {
   display: inline-block;
   width: 100%; }
-  .container33 .el33 {
-    float: left;
-    width: 33%; }
   .container33 .tleft {
+    float: left;
+    width: 60%;
     text-align: left; }
   .container33 .tright {
+    float: left;
+    width: 20%;
     text-align: right; }
   .container33 .tcenter {
+    float: left;
+    width: 20%;
     text-align: center; }
+
+.max-w5 {
+  max-width: 480px !important;
+  margin-left: auto !important;
+  margin-right: auto !important; }
 
 .floatright {
   float: right;
@@ -63,3 +68,20 @@ input.ng-valid {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
+
+.btn-wide {
+  width: 100% !important; }
+
+.btn-50 {
+  width: 50% !important; }
+
+.btn-botm {
+  margin-bottom: 15px; }
+
+.planner-time {
+  font-size: 1.4em;
+  color: #C72929;
+  margin-right: 15px; }
+
+.planner-station {
+  font-size: 1.3em; }
