Language option is now saved in session, language can be changed if session is not available. Language choice dialog is now accessible through the bottom

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,3 +109,6 @@ input.ng-invalid {
   border-color: #C72929 !important; }
   .datepicker .btn-info.active span.text-info {
     color: #FFF !important; }
+
+.ul-lg li {
+  font-size: 1.4em; }
