--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -15,7 +15,8 @@ input.ng-invalid {
   }
 
 .navbar-brand{
-  padding-top: 12px !important;
+  line-height: 1.7em !important;
+  padding-top: 10px !important;
   padding-right: 20px !important;
   padding-left: 5px !important;
   padding-bottom: 0px !important;
