--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -161,6 +161,15 @@ input.ng-invalid {
   font-size: 1.3em;
   }
 
+.navbar-name{
+  font-size: 1.2em;
+  }
+
+.irail-logo{
+  position: relative;
+  top: -3px;
+  }
+
 .datepicker{
   .btn-info.active{
 	background-color: #C72929 !important;
