--- a/public/css/main.css
+++ b/public/css/main.css
@@ -131,7 +131,9 @@ input.ng-invalid {
   font-size: 1.3em; }
 
 .navbar-name {
-  font-size: 1.2em; }
+  font-size: 1.2em;
+  font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-weight: bold; }
 
 .irail-logo {
   position: relative;
@@ -145,3 +147,16 @@ input.ng-invalid {
 
 .ul-lg li {
   font-size: 1.4em; }
+
+/* Animations */
+.row.ng-hide-remove {
+  -webkit-animation: fadeIn 0.7s;
+  animation: fadeIn 0.7s; }
+
+.row.loading.ng-hide-remove {
+  -webkit-animation: bounceIn 0.7s;
+  animation: bounceIn 0.7s; }
+
+.row.routeplanner.ng-hide-remove {
+  -webkit-animation: bounceIn 0.7s;
+  animation: bounceIn 0.7s; }
