--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -202,6 +202,6 @@ input.ng-invalid {
   }
 
 .row.routeplanner.ng-hide-remove {
-  -webkit-animation: bounceIn 0.7s;
-  animation: bounceIn 0.7s;
+  -webkit-animation: fadeInDown 0.7s;
+  animation: fadeInDown 0.7s;
   }
