--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -151,10 +151,18 @@ input.ng-invalid {
   font-size: 1.3em;
   color: #C72929;
   margin-right: 15px;
+  width: 50%;
   }
 
 .planner-station{
+  width: 50%;
 	font-size: 1.2em;
+  margin-right: 15px;
+  }
+
+.delay-route{
+  font-size: 1.2em;
+  color: red;
   }
 
 .badge{
