BounceIn effect in liveboard search

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -160,6 +160,10 @@ input.ng-invalid {
   -webkit-animation: fadeIn 0.7s;
   animation: fadeIn 0.7s; }
 
+a.bounceIn.ng-hide-remove {
+  -webkit-animation: bounceIn 0.7s;
+  animation: bounceIn 0.7s; }
+
 .row.loading.ng-hide-remove {
   -webkit-animation: bounceIn 0.7s;
   animation: bounceIn 0.7s; }
