--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -218,3 +218,8 @@ a.bounceIn.ng-hide-remove {
   -webkit-animation: fadeInDown 0.7s;
   animation: fadeInDown 0.7s;
   }
+
+.label-lg{
+  font-size: 1.5em;
+  }
+//gooby pls
