clean up code + cancel

--- a/public/app/sass/style.scss
+++ b/public/app/sass/style.scss
@@ -1,4 +1,4 @@
 @import "bootstrap/variables";
-@import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap.scss";
+@import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap";
 
 @import "irail/theme";
