--- a/public/app/sass/irail/_theme.scss
+++ b/public/app/sass/irail/_theme.scss
@@ -1,225 +1,174 @@
-/* Main SASS CSS file */
-
+/**
+ * Main iRail theme
+ * This should be split up in multiple files
+ * and this file should disappear
+ */
 
 input.ng-invalid {
   border: 1px solid red !important;
-  }
+}
 
-.navbar-nav{
-  li a{
+.navbar-nav li a {
   font-size: 1.1em;
-  }
-  }
+}
 
-.navbar-bottom{
+.navbar-bottom {
   margin-bottom: 5px !important;
-  }
+}
 
-.navbar-brand{
+.navbar-brand {
   line-height: 1.7em !important;
   padding-top: 10px !important;
   padding-right: 20px !important;
   padding-left: 5px !important;
   padding-bottom: 0px !important;
-  }
+}
 
-.fa-12{
-  font-size: 1.3em;
-  }
-
-.container33{
+.container33 {
   display: inline-block;
   width: 100%;
-  .tleft{
-  float: left;
-  width: 60%;
-  text-align: left;
+
+  .tleft {
+    float: left;
+    width: 60%;
+    text-align: left;
   }
-  .tright{
-  float: left;
-  width: 20%;
-  text-align: right;
+
+  .tright {
+    float: left;
+    width: 20%;
+    text-align: right;
   }
-  .tcenter{
-  float: left;
-  width: 20%;
-  text-align: center;
+
+  .tcenter {
+    float: left;
+    width: 20%;
+    text-align: center;
   }
-  .platform-left{
-  float: left;
-  width: 20%;
-  text-align: left;
+
+  .platform-left {
+    float: left;
+    width: 20%;
+    text-align: left;
   }
-  .time-right{
-  margin-top: 5px;
-  float: left;
-  width: 20%;
-  text-align: right;
+
+  .time-right {
+    margin-top: 5px;
+    float: left;
+    width: 20%;
+    text-align: right;
   }
-  .station-middle{
-  margin-top: 5px;
-  float: left;
-  width: 50%;
-  text-align: left;
+
+  .station-middle {
+    margin-top: 5px;
+    float: left;
+    width: 50%;
+    text-align: left;
   }
-  .delay-right{
-  margin-top: 5px;
-  float: left;
-  width: 10%;
-  text-align: left;
+
+  .delay-right {
+    margin-top: 5px;
+    float: left;
+    width: 10%;
+    text-align: left;
   }
 }
 
-.liveboard-list{
+.liveboard-list {
   font-size: 1.3em;
-  }
+}
 
-.delay{
+.delay {
   color: red;
-  }
+}
 
-.max-w5{
+.max-w5 {
   max-width: 480px !important;
   margin-left: auto !important;
   margin-right: auto !important;
 }
 
-.floatright{
-  float: right;
-  clear: both;
-  }
-
-.center{
+.center {
   text-align: center;
-  }
+}
 
-.list-group{
+.list-group {
   margin-bottom: 0px !important;
-  }
+}
 
 .loader {
   margin: 6em auto;
   font-size: 10px;
   position: relative;
   text-indent: -9999em;
-  border-top: 1.1em solid rgba(0, 0, 0, 0.2);
-  border-right: 1.1em solid rgba(0, 0, 0, 0.2);
-  border-bottom: 1.1em solid rgba(0, 0, 0, 0.2);
+  border: 1.1em solid rgba(0, 0, 0, 0.2);
   border-left: 1.1em solid #C72929;
-  -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
-  }
+}
+
 .loader,
 .loader:after {
   border-radius: 50%;
   width: 10em;
   height: 10em;
-  }
-@-webkit-keyframes load8 {
-  0% {
-  -webkit-transform: rotate(0deg);
-  transform: rotate(0deg);
-  }
-  100% {
-  -webkit-transform: rotate(360deg);
-  transform: rotate(360deg);
-  }
-  }
-@keyframes load8 {
-  0% {
-  -webkit-transform: rotate(0deg);
-  transform: rotate(0deg);
-  }
-  100% {
-  -webkit-transform: rotate(360deg);
-  transform: rotate(360deg);
-  }
-  }
+}
 
-.btn-wide{
+.btn-wide {
   width: 100% !important;
-  }
+}
 
-.btn-50{
+.btn-50 {
   width: 50% !important;
-  }
+}
 
-.btn-botm{
+.btn-botm {
   margin-bottom: 15px;
-  }
+}
 
-.planner-time{
+.planner-time {
   font-size: 1.3em;
   color: #C72929;
   margin-right: 15px;
   width: 50%;
-  }
+}
 
-.planner-station{
+.planner-station {
   width: 50%;
   font-size: 1.2em;
   margin-right: 15px;
-  }
+}
 
-.delay-route{
+.delay-route {
   color: red;
-  }
+}
 
-.badge{
+.badge {
   font-size: 1.3em;
-  }
+}
 
-.navbar-name{
+.navbar-name {
   font-size: 1.2em;
-  font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-family: "PT Sans", sans-serif;
   font-weight: bold;
-  }
+}
 
-.irail-logo{
+.irail-logo {
   position: relative;
   top: -3px;
-  }
+}
 
-.datepicker{
-  .btn-info.active{
-  background-color: #C72929 !important;
-  border-color: #C72929 !important;
-  span.text-info{
-    color: #FFF !important;
+.datepicker {
+  .btn-info.active {
+    background-color: #C72929 !important;
+    border-color: #C72929 !important;
+    span.text-info {
+      color: #FFF !important;
     }
   }
-  }
+}
 
-.ul-lg{
+.ul-lg {
   li{
-  font-size: 1.4em;
+    font-size: 1.4em;
   }
-  }
-
-/* Animations */
-
-.row.ng-hide-remove {
-  -webkit-animation: fadeIn 0.7s;
-  animation: fadeIn 0.7s;
-  }
-
-a.bounceIn.ng-hide-remove {
-  -webkit-animation: bounceIn 0.7s;
-  animation: bounceIn 0.7s;
-  }
-
-
-.row.loading.ng-hide-remove {
-  -webkit-animation: bounceIn 0.7s;
-  animation: bounceIn 0.7s;
-  }
-
-.row.routeplanner.ng-hide-remove {
-  -webkit-animation: fadeInDown 0.7s;
-  animation: fadeInDown 0.7s;
-  }
-
-.label-lg{
-  font-size: 1.5em;
-  }
-//gooby pls
+}
