--- a/public/app/sass/style.scss
+++ b/public/app/sass/style.scss
@@ -1,4 +1,5 @@
 @import "bootstrap/variables";
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/";
 
+@import "irail/animations";
 @import "irail/theme";
