--- a/public/app/sass/bootstrap-custom/_bc-dropdowns.scss
+++ b/public/app/sass/bootstrap-custom/_bc-dropdowns.scss
@@ -4,6 +4,9 @@
 
 .dropdown-menu {
 	right: 0;
+	margin-top: -1px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
 }
 
 .dropdown-menu > li > a {
