--- a/public/app/sass/_shame.scss
+++ b/public/app/sass/_shame.scss
@@ -172,3 +172,23 @@ input.ng-invalid {
     font-size: 1.4em;
   }
 }
+
+.row.ng-hide-remove {
+  animation: fadeIn 0.7s;
+}
+
+a.bounceIn.ng-hide-remove {
+  animation: bounceIn 0.7s;
+}
+
+.row.loading.ng-hide-remove {
+  animation: bounceIn 0.7s;
+}
+
+.row.routeplanner.ng-hide-remove {
+  animation: fadeInDown 0.7s;
+}
+
+.label-lg{
+  font-size: 1.5em;
+}
